# comicos

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  route_audit.csv  route_audit_responses.jsonl  route_audit_summary.md
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  alembic_test.db  pyproject.toml  smoke.db
apps/api/alembic/: env.py
apps/api/app/: http_cors.py  main.py
apps/api/scripts/: _count_list_html.py  _count_visible_rows.py  _diag_ofoy_readonly.py  _parent_match_check.py  _probe_get_comics_views.py  _run_june10_cert_only.py  audit_catalog_cover_images.py  audit_contaminated_barcodes.py  audit_import_retailer_fields.py  audit_p82_listing_urls.py  audit_recommendation_signals.py  audit_release_feed_youngblood.py  audit_volume_classification.py  backfill_import_release_lifecycle.py  backfill_locg_calendar.py  backfill_retailer_product_lookup.py  build_slim_gcd_barcode_db.py  build_top100_canvas.py  capture_locg_date_details_browser.py  check_catalog_fingerprint_coverage.py  comicvine_barcode_backfill.py  debug_fingerprint_match.py  debug_locg_live_page_state.py  debug_title_match.py  debug_xlsx_columns.py  diagnose_collector_advisor_gather.py  diagnose_first_variant_db_error.py  diagnose_p106_1_barcode.py  diagnose_recommendation_signal_bucket.py  download_gcd_assets.py  enrichment_coverage_audit.py  gcd_barcode_backfill.py  gcd_load_sqlite.py  gcd_pipeline_cli.py  generate_locg_2026_backfill_certification_report.py  generate_retailer_encryption_key.py  (+164 more)
(+4964 files in other folders)
