[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comic-os-api"
version = "0.1.0"
description = "FastAPI backend for ComicOS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2.0",
  "cryptography==46.0.3",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "passlib>=1.7,<2.0",
  "pg8000>=1.31,<2.0",
  "pillow>=11.0,<12.0",
  "playwright>=1.49,<2.0",
  "PyJWT>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.14,<1.0",
  "redis>=5.0,<6.0",
  "rq>=2.1,<3.0",
  "sqlmodel>=0.0.22,<1.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.26,<4.0",
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app/models/market_normalization.py" = ["E501"]
"app/schemas/market_normalization.py" = ["E501"]
"app/services/market_normalization.py" = ["E501"]
